[package]
name = "finality-tendermint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-feature = false, features = ["async-await"]}
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
parking_lot = { version = "0.12", optional = true, features = ["deadlock_detection"] }
tokio = { version = "1.20.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = [
    # "parity-scale-codec/std",
    "num/std",
    "parking_lot",
    "log",
    "futures-timer",
    "futures/executor",
    # "scale-info/std",
]
# derive-codec = ["parity-scale-codec", "scale-info"]
# test-helpers = ["fuzz-helpers", "rand", "std"]
test-helpers = ["fuzz-helpers", "std", "deadlock_detection"]
deadlock_detection = []
fuzz-helpers = []
